Changes that may break existing programs are marked using a star *.

Development version
===================

Installation
- Directory of installation by default in $OCAMLLIB/melt. $OCAMLLIB if ocamlfind is installed, the default installation directory of ocamlfind. Otherwise $OCAMLLIB is the standard directory of caml.

Melt tool and library:
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.
- Cairo support for Mlpost 0.7
* ?pdf argument for mlpost becomes ?mode
- -mlpost option
- -mlpost-no-prelude option

Preprocessor:
- Print opened and pending modes in unexpected end of file errors

Latex library:
- phantom, vphantom, hphantom
- Beamer overlays
- makebox, framebox
- unusual_command, for weird LaTeX commands with interleaved [] and {} arguments
or for commands with multiple optional arguments
- place_label to hackishly place a label
- (bugfix) the ~center option of figure has been fixed

Version 1.1.0
=============

Configuration:
- Replaced the configuration tool by a more powerful one using Totoconf

Melt tool:
- -classic-display option
- Added the latop tool to parse LaTeX output and re-print it prettier and with
less trash (for now it is more or less deactivated though)

Preprocessor:
- \" in comments become " to stop the OCaml compiler from complaining about
a string litteral not terminated in a comment.
- $, " and { didn't work as verbatim delimiters and now a parse error is printed
- Errors are now printed as "Melt parse error" instead of just "Parse error"
- Underscores (_) are now accepted in verbatim function names

Latex and Melt libraries:
- Latex.Verbatim.pseudocode (and Melt.Verbatim.pseudocode)
* Bugfix: ~packages argument of commands and environment are now taken into
account even if the command is used deep inside the AST
* Bugfix: Melt.convert now forces math or text mode for `M and `T
- Latex.size type enhanced with more sizes
- Reorganized the interface and its documentation
