@@ -1,3 +1,3 @@
-<melt/tool.*>: use_unix, use_str, use_mlpost
+<melt/tool.*>: use_unix, use_str
 <latop/latop.*>: use_unix, use_str
 <meltpp/*.*>: use_dynlink, use_str
